--- a/requirements_test_all.txt
+++ b/requirements_test_all.txt
@@ -427,6 +427,9 @@ influxdb-client==1.8.0
 # homeassistant.components.influxdb
 influxdb==5.2.3
 
+# homeassistant.components.iotawatt
+iotawattpy==0.0.2
+
 # homeassistant.components.rest
 # homeassistant.components.verisure
 jsonpath==0.82
